[package]
name = "spn"
version = "0.2.0"
authors = ["Jannes Timm"]
edition = "2021"
description = "A client for the Save Page Now 2 API"
documentation = "https://docs.rs/spn"
homepage = "https://github.com/jannes/savepagenow-rs"
license = "MIT OR Apache-2.0"
keywords = ["savepagenow", "spn", "spn2"]
categories = ["api-bindings"]

[dependencies]
reqwest = { version = "0.12.22", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.46.1", features = ["net"] }

[dev-dependencies]
rusty-hook = "0.11.2"
serde_urlencoded = "0.7.1"
tokio = { version = "1.46.1", features = ["macros", "rt", "time"] }

